gpt4all-bindings/rust/src/bindings.rs

extern "C" {
    #[doc = " Generate a response using the model.\n @param model A pointer to the llmodel_model instance.\n @param prompt A string representing the input prompt.\n @param prompt_template A string representing the input prompt template.\n @param prompt_callback A callback function for handling the processing of prompt.\n @param response_callback A callback function for handling the generated response.\n @param recalculate_callback A callback function for handling recalculation requests.\n @param special True if special tokens in the prompt should be processed, false otherwise.\n @param fake_reply A string to insert into context as the model's reply, or NULL to generate one.\n @param ctx A pointer to the llmodel_prompt_context structure."]
    pub fn llmodel_prompt(
        model: llmodel_model,
        prompt: *const ::std::os::raw::c_char,
        prompt_template: *const ::std::os::raw::c_char,
        prompt_callback: llmodel_prompt_callback,
        response_callback: llmodel_response_callback,
        recalculate_callback: llmodel_recalculate_callback,
        ctx: *mut llmodel_prompt_context,
        special: bool,
        fake_reply: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    #[doc = " Generate an embedding using the model.\n NOTE: If given NULL pointers for the model or text, or an empty text, a NULL pointer will be\n returned. Bindings should signal an error when NULL is the return value.\n @param model A pointer to the llmodel_model instance.\n @param texts A pointer to a NULL-terminated array of strings representing the texts to generate an\n embedding for.\n @param embedding_size A pointer to a size_t type that will be set by the call indicating the length\n of the returned floating point array.\n @param prefix The model-specific prefix representing the embedding task, without the trailing colon. NULL for no\n prefix.\n @param dimensionality The embedding dimension, for use with Matryoshka-capable models. Set to -1 to for full-size.\n @param token_count Return location for the number of prompt tokens processed, or NULL.\n @param do_mean True to average multiple embeddings if the text is longer than the model can accept, False to\n truncate.\n @param atlas Try to be fully compatible with the Atlas API. Currently, this means texts longer than 8192 tokens with\n long_text_mode=\"mean\" will raise an error. Disabled by default.\n @param cancel_cb Cancellation callback, or NULL. See the documentation of llmodel_emb_cancel_callback.\n @param error Return location for a malloc()ed string that will be set on error, or NULL.\n @return A pointer to an array of floating point values passed to the calling method which then will\n be responsible for lifetime of this memory. NULL if an error occurred."]
    pub fn llmodel_embed(
        model: llmodel_model,
        texts: *mut *const ::std::os::raw::c_char,
        embedding_size: *mut usize,
        prefix: *const ::std::os::raw::c_char,
        dimensionality: ::std::os::raw::c_int,
        token_count: *mut usize,
        do_mean: bool,
        atlas: bool,
        cancel_cb: llmodel_emb_cancel_callback,
        error: *mut *const ::std::os::raw::c_char,
    ) -> *mut f32;
}
extern "C" {
    #[doc = " Frees the memory allocated by the llmodel_embedding function.\n @param ptr A pointer to the embedding as returned from llmodel_embedding."]
    pub fn llmodel_free_embedding(ptr: *mut f32);
}
extern "C" {
    #[doc = " Set the number of threads to be used by the model.\n @param model A pointer to the llmodel_model instance.\n @param n_threads The number of threads to be used."]
    pub fn llmodel_setThreadCount(model: llmodel_model, n_threads: i32);
}
extern "C" {
    #[doc = " Get the number of threads currently being used by the model.\n @param model A pointer to the llmodel_model instance.\n @return The number of threads currently being used."]
    pub fn llmodel_threadCount(model: llmodel_model) -> i32;
}
extern "C" {
    #[doc = " Set llmodel implementation search path.\n Default is \".\"\n @param path The path to the llmodel implementation shared objects. This can be a single path or\n a list of paths separated by ';' delimiter."]
    pub fn llmodel_set_implementation_search_path(path: *const ::std::os::raw::c_char);
}
extern "C" {
    #[doc = " Get llmodel implementation search path.\n @return The current search path; lifetime ends on next set llmodel_set_implementation_search_path() call."]
    pub fn llmodel_get_implementation_search_path() -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Get a list of available GPU devices given the memory required.\n @param memoryRequired The minimum amount of VRAM, in bytes\n @return A pointer to an array of llmodel_gpu_device's whose number is given by num_devices."]
    pub fn llmodel_available_gpu_devices(
        memoryRequired: usize,
        num_devices: *mut ::std::os::raw::c_int,
    ) -> *mut llmodel_gpu_device;
}
extern "C" {
    #[doc = " Initializes a GPU device based on a specified string criterion.\n\n This function initializes a GPU device based on a string identifier provided. The function\n allows initialization based on general device type (\"gpu\"), vendor name (\"amd\", \"nvidia\", \"intel\"),\n or any specific device name.\n\n @param memoryRequired The amount of memory (in bytes) required by the application or task\n                       that will utilize the GPU device.\n @param device A string specifying the desired criterion for GPU device selection. It can be:\n               - \"gpu\": To initialize the best available GPU.\n               - \"amd\", \"nvidia\", or \"intel\": To initialize the best available GPU from that vendor.\n               - A specific GPU device name: To initialize a GPU with that exact name.\n\n @return True if the GPU device is successfully initialized based on the provided string\n         criterion. Returns false if the desired GPU device could not be initialized."]
    pub fn llmodel_gpu_init_gpu_device_by_string(
        model: llmodel_model,
        memoryRequired: usize,
        device: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    #[doc = " Initializes a GPU device by specifying a valid gpu device pointer.\n @param device A gpu device pointer.\n @return True if the GPU device is successfully initialized, false otherwise."]
    pub fn llmodel_gpu_init_gpu_device_by_struct(
        model: llmodel_model,
        device: *const llmodel_gpu_device,
    ) -> bool;
}
extern "C" {
    #[doc = " Initializes a GPU device by its index.\n @param device An integer representing the index of the GPU device to be initialized.\n @return True if the GPU device is successfully initialized, false otherwise."]
    pub fn llmodel_gpu_init_gpu_device_by_int(
        model: llmodel_model,
        device: ::std::os::raw::c_int,
    ) -> bool;
}
extern "C" {
    #[doc = " @return True if a GPU device is successfully initialized, false otherwise."]
    pub fn llmodel_has_gpu_device(model: llmodel_model) -> bool;
}
extern "C" {
    #[doc = " @return The name of the llama.cpp backend currently in use. One of \"cpu\", \"kompute\", or \"metal\"."]
    pub fn llmodel_model_backend_name(model: llmodel_model) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " @return The name of the GPU device currently in use, or NULL for backends other than Kompute."]
    pub fn llmodel_model_gpu_device_name(model: llmodel_model) -> *const ::std::os::raw::c_char;
}
pub type __builtin_va_list = *mut ::std::os::raw::c_char;
